suport modify job status(enable, disable, deleted)